HelloUltraviolet/Fixtures/RejectedSource/Permissions/SharedMutationWithoutKey/Expected.uv
//! Expected diagnostic metadata for the SharedMutationWithoutKey rejected-source specimen.

expectedDiagnostic("E-TYP-1604", "diagnostics.PermissionAdmissibility")
